# test_visual2012

./: .gitignore  README.markdown
doc/: Call for Library Proposals.htm
fftw3_32/: libfftw3-3.exp  libfftw3-3.lib
project/mac/CAPlayThrough/CAPlayThrough.xcodeproj/xcuserdata/developer.xcuserdatad/xcschemes/: CAPlayThrough 64-bit.xcscheme  CAPlayThrough.xcscheme
project/mac/HALExamples/: ConfigDefaultOutput.c
project/mac/HALExamples/HALExamples.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project/mac/HALExamples/HALExamples.xcodeproj/project.xcworkspace/xcuserdata/developer.xcuserdatad/: UserInterfaceState.xcuserstate
project/mac/HALExamples/HALExamples.xcodeproj/xcuserdata/developer.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
project/mac/HALExamples/HALExamples.xcodeproj/xcuserdata/developer.xcuserdatad/xcschemes/: ConfigDefaultOutput.xcscheme  xcschememanagement.plist
project/mac/test_core_audio/core_audio_cmdline/: AudioDevice.cpp  AudioDevice.h  ConsoleApplication1.cpp  audio_core_mac.cpp  audio_core_mac.h  core_audio_cmdline.1  main.cpp
project/mac/test_core_audio/test_core_audio.xcodeproj/: project.pbxproj
project/mac/test_core_audio/test_core_audio.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project/mac/test_core_audio/test_core_audio.xcodeproj/project.xcworkspace/xcuserdata/developer.xcuserdatad/: UserInterfaceState.xcuserstate
project/mac/test_core_audio/test_core_audio.xcodeproj/xcuserdata/developer.xcuserdatad/xcschemes/: core_audio_cmdline.xcscheme  xcschememanagement.plist
project/mac/test_coreaudio/test_coreaudio/: main.cpp
project/mac/test_coreaudio/test_coreaudio.xcodeproj/: project.pbxproj
project/win/: ConsoleApplication1.sln  basic.props  console.vcxproj  console.vcxproj.filters  main.vcxproj  main.vcxproj.filters  testcpp11.sln
project/win/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  audio_core.cpp  audio_core.h  audio_device.hpp
sndlib/sndlib/: COPYING  HISTORY.sndlib  README.sndlib  UpgradeLog.XML  aclocal.m4  configure  configure.ac  makefile.in  mus-config.h  mus-config.h.in  sndlib-config.in  sndlib.sln  sndlib.sln.old  sndlib.vcproj  sndlib.vcxproj  sndlib.vcxproj.filters  windows-sndlib.h
sndlib/sndlib/autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: AudioFile.h  PerfCounter.h  VstPlugIn.cpp  VstPlugIn.h  avx.h  main.cpp  vst.def
vstsdk2.4/public.sdk/source/vst2.x/: vstplugmain.cpp
